Fix checkstyle issues
There's an issue with checkstyle Identation module. Last closing
parenthesis of a method call chain is reported as indentation issue due
to checkstyle bug. This is logged as a warning and does not fail the
build.